--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,18 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.9",
+        "laravel/horizon": "^5.21",
+        "laravel/octane": "^2.1",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
-        "laravel/vapor-core": "^2.30"
+        "laravel/vapor-core": "^2.33",
+        "laravel/vapor-ui": "^1.7",
+        "mollie/laravel-mollie": "^2.25",
+        "stephenkhoo/laravel-vapor-deploy-helper": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -39,7 +46,8 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan vapor-ui:publish --ansi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -50,7 +58,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+               "barryvdh/laravel-ide-helper"
+            ]
         }
     },
     "config": {
