--- a/vapor.yml
+++ b/vapor.yml
@@ -2,10 +2,29 @@ id: 52802
 name: bouwopdrachten-api
 environments:
     production:
+        gateway-version: 2
+        timeout: 15
+        cli-timeout: 180
         memory: 1024
         cli-memory: 512
-        runtime: 'php-8.2:al2'
+        octane: true
+        storage: bouwopdrachten-api-production-storage
+        runtime: docker-arm
         build:
-            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
-            - 'php artisan event:cache'
-          # - 'npm ci && npm run build && rm -rf node_modules'
+            - 'php artisan build:composer-mirror --quiet'
+            - 'php artisan optimize:clear --quiet'
+            - 'php artisan event:cache --quiet'
+    staging:
+        gateway-version: 2
+        timeout: 15
+        memory: 1024
+        cli-timeout: 180
+        cli-memory: 512
+        octane: true
+        domain: bouwopdrachten-api.interp.id
+        storage: bouwopdrachten-api-staging-storage
+        runtime: docker-arm
+        build:
+            - 'php artisan build:composer-mirror --quiet'
+            - 'php artisan optimize:clear --quiet'
+            - 'php artisan event:cache --quiet'
