--- a/vapor.yml
+++ b/vapor.yml
@@ -4,9 +4,9 @@ environments:
     production:
         gateway-version: 2
         timeout: 15
+        memory: 2048
         cli-timeout: 180
-        memory: 1024
-        cli-memory: 512
+        cli-memory: 1024
         octane: true
         storage: bouwopdrachten-api-production-storage
         runtime: docker-arm
@@ -14,6 +14,8 @@ environments:
             - 'php artisan build:composer-mirror --quiet'
             - 'php artisan optimize:clear --quiet'
             - 'php artisan event:cache --quiet'
+            - 'yarn > /dev/null'
+            - 'yarn build > /dev/null'
     staging:
         gateway-version: 2
         timeout: 15
@@ -28,3 +30,5 @@ environments:
             - 'php artisan build:composer-mirror --quiet'
             - 'php artisan optimize:clear --quiet'
             - 'php artisan event:cache --quiet'
+            - 'yarn > /dev/null'
+            - 'yarn build > /dev/null'
