--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "dev": [
+            "composer dump-autoload",
+            "@php artisan package:discover --ansi",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:models -W",
+            "@php artisan ide-helper:meta"
         ]
     },
     "extra": {
